--- a/src/main/resources/templates/charge/show_aramaki.html
+++ b/src/main/resources/templates/charge/show_aramaki.html
@@ -2,9 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>記録表示</title>
 </head>
 <body>
-
+	<form action="">
+		<select name="" id="">
+			<option th:each="" th:value=""></option>
+		</select>
+<!-- 		<table> -->
+<!-- 			<th>筋トレマシン名</th> -->
+<!-- 			<th>回数</th> -->
+<!-- 			<th>セット数</th> -->
+<!-- 		</table> -->
+	</form>
 </body>
 </html>
