--- a/src/main/resources/templates/charge/record_aramaki.html
+++ b/src/main/resources/templates/charge/record_aramaki.html
@@ -7,13 +7,13 @@
 <body>
 	<div th:fragment="machineSetCount">
 		<form action="" method="post" th:object="${machineSetCount}">
-			
+
 <!-- ユーザーID： -->
-			
+
 			<p>日付：
 				<input type="date" th:field="*{date}" />
 			</p>
-		
+
 			<p>筋トレマシン名：
 				<select th:field="*{machineId}" >
 					<option th:each="machine : ${machine}" th:value="${machine.machineId}">
@@ -21,7 +21,15 @@
 					</option>
 				</select>
 			</p>
-			
+
+			<p>重量：
+				<select th:field="*{machineWeight}">
+					<option th:each="i : ${#number.sequence(1, weight)" th:value="${i}">
+						[[${i}]]
+					</option>
+				</select>
+			</p>
+
 <!-- 時間があったら・・・input要素とdatalist要素で「テキスト入力」と「入力候補からの選択」の両方が可能なフォームを作成 -->
 			<p>1セットあたりの回数：
 				<select th:field="*{count}">
@@ -45,7 +53,7 @@
 			</p>
 
 			<p><input type="submit" th:value="記録する" /></p>
-			
+
 		</form>
 	</div>
 </body>
