筋トレマシンMax値、Min値の追加・表示（荒牧）

--- a/src/main/resources/templates/charge/mypage_aramaki.html
+++ b/src/main/resources/templates/charge/mypage_aramaki.html
@@ -5,6 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	<h1>マイページ表示</h1>
+	<p>体重の表示</p>
+	<p>BMIの表示</p>
+	<p>Max値の表示</p>
+	<p>Min値の表示</p>
 </body>
 </html>
