--- a/src/main/resources/templates/charge/show_aramaki.html
+++ b/src/main/resources/templates/charge/show_aramaki.html
@@ -2,18 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>詳細内容閲覧</title>
+<title>記録完了</title>
 </head>
 <body>
-	<h1>トレーニング記録情報</h1>
-	<th:block th:object="${MachineSetCount}">
-		<p>日付：[[*{date}]]</p>
-		
-		<p>筋トレマシン名：[[${}]]</p>
-		
-		<p>重量：[[*{}]] kg</p>
-		<p>1セットあたりの回数：[[*{}]] 回</p>
-		<p>セット数：[[*{}]] セット</p>
-	</th:block>
+
 </body>
 </html>
