user image 結合テスト ogushi
OK

--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -9,7 +9,7 @@
 	<h1>MY PAGE</h1>
 	<a th:href="@{/user/setting/{id}(id=${session.user.userId})}">設定</a>
 	<a th:href="@{/user/logout}">ログアウト</a>
-	<h2>記録をする</h2>
+	<h2><a th:href="@{/record}">記録をする</a></h2>
 	
 	
 	<h2>記録を見る</h2>
