--- a/src/main/resources/templates/weightRegisterDone.html
+++ b/src/main/resources/templates/weightRegisterDone.html
@@ -2,9 +2,24 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>体重登録完了</title>
+<title>体重の登録完了</title>
 </head>
 <body>
-	<h1>体重登録完了</h1>
+	<h1>体重の体重登録完了</h1>
+	
+<!-- 	<th:block th:object="weightBmi"> -->
+<!-- 		<table border="1"> -->
+<!-- 			<tr><th>体重</th><td>[[*{userWeight}]]kg</td></tr> -->
+<!-- 			<tr><th>BMI</th><td>[[*{bmi}]]</td></tr> -->
+<!-- 			<tr><th>あなたの適正体重</th><td>[[*{healthyWeight}]]kg</td></tr> -->
+<!-- 		</table> -->
+<!-- 	</th:block> -->
+
+		<table border="1"> 
+			<tr><th>体重</th><td>[[${weightBmi.userWeight}]]kg</td></tr>
+			<tr><th>BMI</th><td>[[${weightBmi.bmi}]]</td></tr>
+			<tr><th>あなたの適正体重</th><td>[[${weightBmi.healthyWeight}]]kg</td></tr>
+		</table>
+	
 </body>
 </html>
