--- a/src/main/resources/templates/charge/mypage_aramaki.html
+++ b/src/main/resources/templates/charge/mypage_aramaki.html
@@ -6,9 +6,13 @@
 </head>
 <body>
 	<h1>マイページ表示</h1>
-	<p>体重の表示</p>
-	<p>BMIの表示</p>
-	<p>Max値の表示</p>
-	<p>Min値の表示</p>
+	<th:block th:object="${weightBmi}">	
+		<table border="1">
+			<tr><th>日付</th><td>[[*{date}]]</td></tr>
+			<tr><th>体重</th><td>[[*{userWeight}]]</td></tr>
+			<tr><th>BMI</th><td>[[*{bmi}]]</td></tr>
+			<tr><th>適正体重</th><td>[[*{healthyWeight}]]</td></tr>
+		</table>
+	</th:block>
 </body>
 </html>
