--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,7 +10,8 @@
 		<p th:errors="*{loginPass}"></p>
 	</th:block>
 	<h1>ユーザー登録</h1>
-	<form action="" method="post" th:object="${user}">
+	<form action="" method="post" enctype="multipart/form-data"
+		 th:object="${user}">
 		<p>
 			ログインID:<input type="text" th:field="*{loginId}" />
 		</p>
@@ -21,13 +22,15 @@
 			身長:<input type="text" th:field="*{userHeight}" />
 		</p>
 		<p>
+		<input type="file" name="upload"/>
+		</p>
+		<img th:src="@{/uploads/{name}(name=${user.fileName})}" alt="" />
+		<p>
 			<input type="submit" value="登録" />
 		</p>
-
-
-
 	</form>
-
+	
+<p><a th:href="login">ログイン画面へ</a></p>
 
 </body>
 </html>
