--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,15 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <title>ユーザー登録</title>
+<link
+	th:href="https://fonts.googleapis.com/css2?family=Prompt:wght@700&display=swap"
+	rel="stylesheet" />
+<!-- splide.js cdn -->
+<script
+	src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/js/splide.min.js"></script>
+<!-- splide.css cdn -->
+<link rel="stylesheet"
+	th:href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
+<link rel="stylesheet" th:href="css/common.css">
+<link rel="stylesheet" th:href="css/reset.css">
 </head>
 <body>
+	<div class="inner">
+		<h1>
+			<a href="">ロゴ</a>
+		</h1>
+		<nav class="navigation">
+			<ul role='list'>
+				<li><a th:href="@{/user/register}">新規会員登録</a></li>
+				<li><a th:href="@{/user/login}">ログイン</a></li>
+			</ul>
+		</nav>
+	</div>
+	</header>
 	<th:block th:object="${user}">
 		<p th:errors="*{loginId}"></p>
 		<p th:errors="*{loginPass}"></p>
 	</th:block>
 	<h1>ユーザー登録</h1>
 	<form action="" method="post" enctype="multipart/form-data"
-		 th:object="${user}">
+		th:object="${user}">
 		<p>
 			ログインID:<input type="text" th:field="*{loginId}" />
 		</p>
@@ -22,15 +45,16 @@
 			身長:<input type="text" th:field="*{userHeight}" />
 		</p>
 		<p>
-		<input type="file" name="upload"/>
+			<input type="file" name="upload" />
 		</p>
 		<img th:src="@{/uploads/{name}(name=${user.fileName})}" alt="" />
 		<p>
 			<input type="submit" value="登録" />
 		</p>
 	</form>
-	
-<p><a th:href="login">ログイン画面へ</a></p>
 
+	<footer>
+		<small>Copyright 2024 TRECORD</small>
+	</footer>
 </body>
 </html>
