--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,8 +12,8 @@
 <!-- splide.css cdn -->
 <link rel="stylesheet"
 	th:href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
-<link rel="stylesheet" th:href="css/common.css">
-<link rel="stylesheet" th:href="css/reset.css">
+<link rel="stylesheet" th:href="@{/css/common.css}">
+<link rel="stylesheet" th:href="@{/css/reset.css}">
 </head>
 <body>
 	<div class="inner">
