--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -3,6 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>My Page</title>
+<link
+	href="https://fonts.googleapis.com/css2?family=Prompt:wght@700&display=swap"
+	rel="stylesheet" />
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
+<link rel="stylesheet" th:href="@{/css/common.css}">
+<link rel="stylesheet" th:href="@{/css/reset.css}">
 </head>
 <body>
 
@@ -23,7 +30,9 @@
 
 
 	</th:block>
-
+<footer>
+		<small>Copyright 2024 TRECORD</small>
+	</footer>
 
 </body>
 </html>
