--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -3,6 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>トレーニング内容upload</title>
+<link
+	href="https://fonts.googleapis.com/css2?family=Prompt:wght@700&display=swap"
+	rel="stylesheet" />
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
+<link rel="stylesheet" th:href="@{/css/common.css}">
+<link rel="stylesheet" th:href="@{/css/reset.css}">
 </head>
 <body>
 
@@ -30,6 +37,9 @@
 	<p>
 		<a href="mypage">My Pageへ</a>
 	</p>
+<footer>
+		<small>Copyright 2024 TRECORD</small>
+	</footer>
 
 </body>
 </html>
