--- a/src/main/resources/templates/weight.html
+++ b/src/main/resources/templates/weight.html
@@ -3,6 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>体重登録</title>
+<link
+	href="https://fonts.googleapis.com/css2?family=Prompt:wght@700&display=swap"
+	rel="stylesheet" />
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
+<link rel="stylesheet" th:href="@{/css/common.css}">
+<link rel="stylesheet" th:href="@{/css/reset.css}">
 </head>
 <body>
 	<h1>体重登録</h1>
@@ -17,5 +24,8 @@
 		
 		<p><input type="submit" th:value="BMIを計算する" /></p>
 	</form>
+	<footer>
+		<small>Copyright 2024 TRECORD</small>
+	</footer>
 </body>
 </html>
